<resources>
    // Activity
    <string name="app_name">My Avatar</string>
    <string name="txtTitulo">Avatar</string>
    <string name="txtPulsar">Pulsa en el anillo y crea tu avatar</string>
    <string name="editNombre">Nombre</string>
    <string name="img_avatar">Imagen Avatar</string>
    <string name="img_profesion">Imagen Profesión</string>
    <string name="txt_vida">Vida</string>
    <string name="txt_magia">Magia</string>
    <string name="txt_fuerza">Fuerza</string>
    <string name="txt_velocidad">Velocidad</string>
    <string name="txt_nombre_elegido">Nombre elegido</string>
    <string name="btn_cerrar">Cerrar app</string>

    // Elementos del RadioButton Sexo
    <string name="rg_sexo">Sexo</string>
    <string name="rb_hombre">HOMBRE</string>
    <string name="rb_mujer">MUJER</string>
    <string-array name="sexo">
        <item>@string/rb_hombre</item>
        <item>@string/rb_mujer</item>
    </string-array>

    // Elementos del RadioButton Especie
    <string name="rg_especie">Especie</string>
    <string name="rb_elfo">ELF@</string>
    <string name="rb_enano">ENAN@"</string>
    <string name="rb_hobbit">HOBBIT</string>
    <string name="rb_humano">HUMAN@</string>
    <string-array name="especie">
        <item>@string/rb_elfo</item>
        <item>@string/rb_enano</item>
        <item>@string/rb_hobbit</item>
        <item>@string/rb_humano</item>
    </string-array>

    // Elementos del RadioButton Profesion
    <string name="rg_profesion">Profesión</string>
    <string name="rb_arquero">ARQUER@</string>
    <string name="rb_guerrero">GUERRER@</string>
    <string name="rb_mago">MAG@</string>
    <string name="rb_herrero">HERRER@</string>
    <string name="rb_minero">MINER@</string>
    <string-array name="profesion">
        <item>Arquero</item>
        <item>Guerrero</item>
        <item>Mago</item>
        <item>Herrero</item>
        <item>Minero</item>
    </string-array>

    // Imágenes
    <string name="img_elfa">Elfa</string>
    <string name="img_elfo">Elfo</string>
    <string name="img_enana">Enana</string>
    <string name="img_enano">Enano</string>
    <string name="img_hobbit_hombre">Hobbit</string>
    <string name="img_hobbit_mujer">Hobbit</string>
    <string name="img_humana">Human</string>
    <string name="img_humano">Humano</string>
    <string name="img_arquero">Arquero</string>
    <string name="img_guerrero">Guerrero</string>
    <string name="img_mago">Mago</string>
    <string name="img_herrero">Herrero</string>
    <string name="img_minero">Minero</string>

</resources>