<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment">

        <TextView
            android:id="@+id/edit_nombre_elegido"
            android:layout_width="224dp"
            android:layout_height="34dp"
            android:text="@string/txt_nombre_elegido"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="232dp"
            android:layout_height="367dp"
            android:contentDescription="@string/img_elfa"
            android:foreground="@drawable/elfa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307"
            tools:src="@drawable/elfa" />

        <ImageView
            android:id="@+id/profesion"
            android:layout_width="89dp"
            android:layout_height="183dp"
            android:contentDescription="@string/img_arquero"
            android:foreground="@drawable/arco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.204"
            tools:src="@drawable/arco" />

        <TextView
            android:id="@+id/txt_poderes"
            android:layout_width="182dp"
            android:layout_height="40dp"
            android:enabled="false"
            android:fadeScrollbars="false"
            android:fontFamily="@font/arizonia"
            android:gravity="center"
            android:hapticFeedbackEnabled="false"
            android:scrollbars="horizontal|none"
            android:soundEffectsEnabled="false"
            android:text="@string/txt_poderes"
            android:textAllCaps="true"
            android:textColor="#8A0A0A"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.759"
            tools:layerType="hardware" />

        <TextView
            android:id="@+id/txt_magia"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:text="@string/txt_magia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />

        <TextView
            android:id="@+id/txt_fuerza"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:text="@string/txt_fuerza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912" />

        <TextView
            android:id="@+id/txt_velocidad"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:text="@string/txt_velocidad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962" />

        <TextView
            android:id="@+id/txt_vida"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:text="@string/txt_vida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>